_KUBERNETS/manifests/15-servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-metrics
  namespace: wordpress
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9113
    targetPort: 9113
  selector:
    app: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-metrics
  namespace: wordpress
  labels:
    app: mysql
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9104
    targetPort: 9104
  selector:
    app: mysql
