_KUBERNETS/manifests/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
  - host: phpmyadmin.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 8080
  - host: uptime.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-service
            port:
              number: 3001
  - host: mail.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailhog-service
            port:
              number: 8025
